--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ beautifulsoup4 = "^4.13.3"
 dotenv = "^0.9.9"
 openai = "^1.64.0"
 jq = "^1.8.0"
+uvicorn = "^0.34.0"
 
 [tool.poetry.dev-dependencies]
 
